[project]
name = "docxupscaler"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "python-docx>=1.2.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[tool.uv.sources]
torch = { index = "torch" }
torchvision = { index = "torch" }

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
